--- a/webUI/requestedride.html
+++ b/webUI/requestedride.html
@@ -66,7 +66,7 @@
                    <h1 class="brand" style="padding-left:40px;">
 
                     <div class="circular" style="background: url(http://avatars.io/facebook/thanhhaimai?size=medium) no-repeat;
-float:left;"></div> <a style="float:right; padding-left: 5px;"> &nbsp; Than Hai  requested a hug at 3:52pm </p>
+float:left;"></div> <a style="float:right; padding-left: 5px; padding-top:5px;"> &nbsp; Than Hai  requested a hug at 3:52pm </p>
                                           
                     </h1>
             
