--- a/webUI/index.html
+++ b/webUI/index.html
@@ -66,8 +66,9 @@
                     <div class="nav-collapse">
                         <ul class="nav pull-right">
                           <li><a href="#home" class="anchorLink">Home</a></li>
-                          <li><a href="#about" class="anchorLink">About</a></li>
-                          <li><a href="#contact" class="anchorLink">Get Hugs</a></li>
+
+                          <li><a href="#myModal" onclick="$('#myModal').modal('show')
+" class="anchorLink">Request A Hug</a></li>
                           <li><a href="/login">Login</a></li>
                         </ul>
                     </div>
@@ -94,6 +95,25 @@
     </div>
 <!-- End Callout -->
 
+<!-- MODAL WINDOW WITH TEXT INPUT --> 
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index:5000;">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Request a Hug </h3>
+  </div>
+  <div class="modal-body">
+    <p>
+<form class="navbar-form pull-left">
+  <input type="text" class="span2" placeholder="Phone Number">
+  <button type="submit" class="btn">Submit</button>
+</form>
+    </p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+  </div>
+</div>
+<!-- --> 
 
 <!-- Start About -->
         <div class="row-fluid section" id="about" style="margin-top:-100px;">
@@ -101,7 +121,9 @@
 
             <div class="explain">
               <h2>We're disrupting hugs</h2>
-              <p class="intro">The future of hugs. It's like Uber for hugs. </p>
+
+              <p class="intro">The future of hugs. It's like Uber for hugs. <br><br>               <a href="#myModal" role="button" class="btn" data-toggle="modal">Get a hug</a>
+</p>
               <div class="row-fluid"> 
               <div class="span4">
                 <h3>What you need</h3>
@@ -131,6 +153,15 @@
       </div>
             
                 
+ <div class="row-fluid section" id="about" style="margin-top:-100px;">
+          <div class="container"> 
+
+            <div class="explain">
+              <h2>12 Hugs Delivered Today!</h2>
+
+            </div>
+                        </div>
+            </div>
 
 
 <!--
